Another try at implementing A funcitonality, since last time everything just died for some reason.  Removed instructor code due to request and included the switches in the UCF files.

--- a/whateverthehellIwant.ucf
+++ b/whateverthehellIwant.ucf
@@ -3,7 +3,8 @@ VCCAUX = 3.3;
 NET "clk" LOC = "L15" | PERIOD = 100 MHz;
 
 NET "reset" LOC = "F5" | IOSTANDARD = LVCMOS33;
-
+net "switch1" LOC = "E4" | IOSTANDARD = LVCMOS33;
+net "switch2" LOC = "T5" | IOSTANDARD = LVCMOS33;
 NET "TMDS(0)"      LOC = "D8" | IOSTANDARD = TMDS_33 ; # Blue
 NET "TMDSB(0)"  LOC = "C8" | IOSTANDARD = TMDS_33 ;
 NET "TMDS(1)"      LOC = "C7" | IOSTANDARD = TMDS_33 ; # Red
